monitoring/grafana/30-service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  selector:
    app: grafana
  type: NodePort
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
