monitoring/grafana/40-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - secretName: grafana-tls-prod-cert
    hosts:
    - grafana.sost.ovh
  rules:
  - host: grafana.sost.ovh
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
